assets/styles/blocks/_parallax-background.scss
.parallax-background {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 100vh;
  z-index: -1;

  &__image {
    position: absolute;
    background-size: cover;
    background-position: center bottom;
    background-repeat: no-repeat;
    height: 100%;
    width: 100%;
    transition: opacity .3s ease-in-out;
  }
  &__overlay {
    position: absolute;
    background-size: cover;
    background-position: center bottom;
    background-repeat: no-repeat;
    height: 100%;
    width: 100%;
    transition: opacity .2s ease-in-out;
  }
}

